--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ Tags: one-column, custom-colors, custom-menu, custom-logo, editor-style, feature
 
 Twenty Twenty-Two WordPress Theme, (C) 2021 WordPress.org
 Twenty Twenty-Two is distributed under the terms of the GNU GPL.
+push test
 */
 
 /*
